--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -2202,6 +2202,7 @@ h2 + .list-link-soup {
             padding: 8px 15px;
             border: 1px solid $gray-line;
             border-radius: 4px;
+            cursor: pointer;
         }
         &.hover-on {
             display: inline-block;
